# turbo-chainsaw

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.nobuild.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/variables/: variables.env
.github/workflows/: build-trunk.yaml
authormgmt/: admin.py  apps.py  models.py  views.py
authormgmt/migrations/: 0001_initial.py  0002_seed_database.py
bookstore/: models.py  views.py
bookstore/migrations/: 0001_initial.py  0002_seed_database.py  0003_book_author.py  0004_make_fk_author_connections.py
deploy_pipeline_vm_example/: README.md
django_project/: permissions.py  settings.py  urls.py
ehr/: admin.py  apps.py  models.py  urls.py  views.py
ehr/forms/: forms.py
ehr/migrations/: 0001_initial.py  0002_remove_patient_pseudonymized_pii_and_more.py  0003_patient_user.py  0004_alter_patient_pmi.py  0005_alter_patient_user.py
keycloak/keycloak_config/: realm-export.json  test-authz-config.json  test-authz-config_UMA.json  turbo.json
keycloak/keycloak_policies/: hasAssociatedUserEmail.js  hasAssociatedUserIDResourceName.js  hasAttributeAssociatedUserId.js  isResourceOwner.js
keycloak_data/h2/: keycloakdb.mv.db  keycloakdb.trace.db
users/: admin.py  auth.py  auth_utils.py  consent_utils.py  decorators.py  fields.py  keycloak_api_call.py  middleware.py  models.py  pseudonymize_utils.py  scopes.py  uma_policy_management.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_user_keycloak_id.py  0006_resource_type.py  (+9 more)
(+17 files in other folders)
